--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,12 @@
-<p>footer works!</p>
+<footer class="p-3 mb-2 bg-dark text-white footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6" style="text-align: left;">
+                <p class="text-left">© Calidad de Software</p>
+            </div>
+            <div class="col-md-6" style="text-align: right;">
+                <p>Grupo #3 - Avance 2</p>
+            </div>
+        </div>
+    </div>
+</footer>
