--- a/src/app/components/registrar-categorias/registrar-categorias.component.html
+++ b/src/app/components/registrar-categorias/registrar-categorias.component.html
@@ -1,1 +1,11 @@
-<p>registrar-categorias works!</p>
+<!-- Registro de categorías -->
+<div class="registro_cat">
+    <h2>Registro de Categorías</h2>
+    <form id="categoriaForm">
+        <div class="form-group">
+            <label for="categoria">Categoría:</label>
+            <input type="text" class="form-control" id="categoria" placeholder="Ingrese la categoría">
+        </div><br>
+        <button type="submit" class="btn btn-primary">Agregar Categoría</button>
+    </form>
+</div>
