--- a/src/app/components/listar-inventario-producto/listar-inventario-producto.component.html
+++ b/src/app/components/listar-inventario-producto/listar-inventario-producto.component.html
@@ -1,9 +1,9 @@
-<div class="listar_inv_produc">
+<div class="listar_inv_produc border-0 shadow-lg" style="padding: 2%;">
     <!-- Listados de Inventarios -->
     <h2>Listados de Inventarios</h2>
     <h3>Por Productos</h3>
-    <table id="inventarioPorProducto" class="table" style="text-align: center;">
-      <thead>
+    <table id="inventarioPorProducto" class="table table-striped" style="text-align: center;">
+      <thead class="table-dark">
         <tr>
           <th>Categoría</th>
           <th>Nombre</th>
