--- a/src/app/components/listar-inventarios-agotados/listar-inventarios-agotados.component.html
+++ b/src/app/components/listar-inventarios-agotados/listar-inventarios-agotados.component.html
@@ -1,9 +1,9 @@
-<div class="listar_inv_agotado">
+<div class="listar_inv_agotado border-0 shadow-lg" style="padding: 2%;">
     <!-- Listados de Inventarios -->
     <h2>Listados de Inventarios</h2>
     <h3>Productos Agotados o Próximos a Agotar</h3>
-    <table id="inventarioAgotado" class="table" style="text-align: center;">
-        <thead>
+    <table id="inventarioAgotado" class="table table-striped" style="text-align: center;">
+        <thead class="table-dark">
             <tr>
                 <th>Categoría</th>
                 <th>Nombre</th>
