--- a/src/app/components/registrar-categorias/registrar-categorias.component.html
+++ b/src/app/components/registrar-categorias/registrar-categorias.component.html
@@ -1,11 +1,25 @@
 <!-- Registro de categorías -->
-<div class="registro_cat">
-    <h2>Registro de Categorías</h2>
-    <form id="categoriaForm">
-        <div class="form-group">
-            <label for="categoria">Categoría:</label>
-            <input type="text" class="form-control" id="categoria" placeholder="Ingrese la categoría">
-        </div><br>
-        <button type="submit" class="btn btn-primary">Agregar Categoría</button>
-    </form>
-</div>
+<div class="principal d-flex justify-content-center" style="padding-left: 30%;">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 mb-3 mb-sm-0">
+          <div class="card border-0 shadow-lg">
+            <div class="card-body">
+              <div>
+                <h2 class="text-center">Registro de Categorías</h2>
+                <form id="categoriaForm">
+                  <div class="form-group">
+                    <label for="categoria">Categoría:</label>
+                    <input type="text" class="form-control" id="categoria" placeholder="Ingrese la categoría">
+                  </div><br>
+                  <div style="text-align: center;">
+                    <button type="submit" class="btn btn-primary">Agregar Categoría</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>  
