--- a/src/app/components/listar-inventario-categorias/listar-inventario-categorias.component.html
+++ b/src/app/components/listar-inventario-categorias/listar-inventario-categorias.component.html
@@ -1,9 +1,9 @@
-<div class="listar_inv_cat">
+<div class="listar_inv_cat border-0 shadow-lg" style="padding: 2%;">
     <!-- Listados de Inventarios -->
     <h2>Listados de Inventarios</h2>
     <h3>Por Categorías</h3>
-    <table id="inventarioPorCategoria" class="table" style="text-align: center;">
-        <thead>
+    <table id="inventarioPorCategoria" class="table table-striped" style="text-align: center;">
+        <thead class="table-dark">
             <tr>
                 <th>Categoría</th>
                 <th>Nombre</th>
