--- a/src/app/components/listar-inventario-categorias/listar-inventario-categorias.component.html
+++ b/src/app/components/listar-inventario-categorias/listar-inventario-categorias.component.html
@@ -1,31 +1,19 @@
 <div class="listar_inv_cat border-0 shadow-lg" style="padding: 2%;">
     <!-- Listados de Inventarios -->
     <h2>Listados de Inventarios</h2>
-    <h3>Por Categorías</h3>
+    <h4>Por Categorías existentes: </h4>
     <table id="inventarioPorCategoria" class="table table-striped" style="text-align: center;">
         <thead class="table-dark">
             <tr>
-                <th>Categoría</th>
-                <th>Nombre</th>
-                <th>Marca</th>
+                <th scope="col"> #</th>
+                <th scope="col"> Categoría</th>
             </tr>
         </thead>
         <tbody>
             <!-- Filas de productos obtenidos de la base de datos -->
-            <tr>
-                <th scope="row">Enlatado</th>
-                <td>Atún</td>
-                <td>El cocinero</td>
-            </tr>
-            <tr>
-                <th scope="row">Enlatado</th>
-                <td>Sardina</td>
-                <td>La favorita</td>
-            </tr>
-            <tr>
-                <th scope="row">Frutas</th>
-                <td>Manzana</td>
-                <td>Frutitas S.A</td>
+            <tr *ngFor="let categoria of listCategoria let i=index">
+                <th>{{ i + 1 }}</th>
+                <th>{{categoria.categoria_nombre}}</th>
             </tr>
         </tbody>
     </table>
