--- a/src/app/components/registrar-productos/registrar-productos.component.html
+++ b/src/app/components/registrar-productos/registrar-productos.component.html
@@ -2,40 +2,41 @@
 <div class="container" style="justify-content: center; width: 70%; padding: 5%;">
     <div class="row border-0 shadow-lg">
         <h2>Registro de Productos</h2><br>
-        <form>
+        <form [formGroup]="form" (ngSubmit)="agregarProducto()">
             <div class="row">
                 <div class="col" style="margin: 1%;">
                     <div class="form-group">
-                        <label for="categoriaProducto"> Seleccionar Categoría:</label>
-                        <select class="form-select" aria-label="Default select example">
-                            <option selected> Seleccionar</option>
+                        <label for="categoriaProducto">Seleccionar Categoría:</label>
+                        <select class="form-select" aria-label="Default select example" formControlName="categoria">
+                            <option value="">Seleccionar</option>
                             <option *ngFor="let categoria of categorias" [value]="categoria.categoria_nombre">{{ categoria.categoria_nombre }}</option>
                         </select>
                     </div><br>
                     <div class="form-group col">
                         <label for="nombre">Nombre:</label>
-                        <input type="text" class="form-control" id="nombre"
-                            placeholder="Ingrese el nombre del producto">
+                        <input type="text" class="form-control" id="nombre" placeholder="Ingrese el nombre del producto" formControlName="nombre_producto">
                     </div><br>
                     <div class="form-group col">
                         <label for="marca">Marca:</label>
-                        <input type="text" class="form-control" id="marca" placeholder="Ingrese la marca del producto">
+                        <input type="text" class="form-control" id="marca" placeholder="Ingrese la marca del producto" formControlName="nombre_marca">
                     </div>
                 </div>
                 <div class="col" style="margin: 1%;">
                     <div class="form-group col">
                         <label for="peso">Peso:</label>
-                        <input type="text" class="form-control" id="peso" placeholder="Ingrese el peso del producto">
+                        <input type="text" class="form-control" id="peso" placeholder="Ingrese el peso del producto" formControlName="peso">
                     </div><br>
                     <div class="form-group col">
                         <label for="precioCompra">Precio de Compra ($):</label>
-                        <input type="text" class="form-control" id="precioCompra"
-                            placeholder="Ingrese el precio de compra">
+                        <input type="text" class="form-control" id="precioCompra" placeholder="Ingrese el precio de compra" formControlName="precio_compra">
                     </div><br>
                     <div class="form-group col">
                         <label for="precioVenta">Precio de Venta ($):</label>
-                        <input type="text" class="form-control" id="precioVenta"
-                            placeholder="Ingrese el precio de venta">
+                        <input type="text" class="form-control" id="precioVenta" placeholder="Ingrese el precio de venta" formControlName="precio_venta">
+                    </div><br>
+                    <div class="form-group col">
+                        <label for="cantidad_stock">Cantidad en Stock:</label>
+                        <input type="text" class="form-control" id="cantidad_stock" placeholder="Ingrese la cantidad en stock" formControlName="cantidad_stock">
                     </div><br>
                 </div>
             </div>
