--- a/src/app/components/registrar-ventas/registrar-ventas.component.html
+++ b/src/app/components/registrar-ventas/registrar-ventas.component.html
@@ -1,6 +1,7 @@
 <div class="container" style="justify-content: center; width: 50%; padding: 5%;">
     <div class="row border-0 shadow-lg">
       <h2>Registro de Ventas</h2><br>
+      <h5>Precio en el que vendemos (salida) </h5><br>
       <form [formGroup]="form">
         <div class="form-group">
           <label for="categoriaProducto">Seleccionar Categoría:</label>
