--- a/src/app/components/listar-inventario-producto/listar-inventario-producto.component.html
+++ b/src/app/components/listar-inventario-producto/listar-inventario-producto.component.html
@@ -13,6 +13,7 @@
         <th>Precio de Compra</th>
         <th>Precio de Venta</th>
         <th>Cantidad en Stock</th>
+        <th>Acciones</th>
       </tr>
     </thead>
     <tbody>
@@ -25,6 +26,10 @@
         <td>{{ producto.precio_compra }}</td>
         <td>{{ producto.precio_venta }}</td>
         <td>{{ producto.cantidad_stock }}</td>
+        <td>
+          <i class="bi bi-pencil-square"></i>
+          <i class="bi bi-file-earmark-x-fill"></i>
+        </td>
       </tr>
     </tbody>
   </table>
