--- a/src/app/components/registrar-productos/registrar-productos.component.html
+++ b/src/app/components/registrar-productos/registrar-productos.component.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div style="text-align: center;">
-                <button type="submit" class="btn btn-primary">Agregar Producto</button><br><br>
+                <button type="submit" class="btn btn-primary">Guardar Producto</button><br><br>
             </div>
         </form>
     </div>
