--- a/src/app/components/listar-inventario-categorias/listar-inventario-categorias.component.css
+++ b/src/app/components/listar-inventario-categorias/listar-inventario-categorias.component.css
@@ -1,3 +1,16 @@
 .listar_inv_cat{
     margin: 2% 15%;
 }
+i{
+    padding: 5px;
+    margin-left: 5px;
+    font-size: 20px;
+    cursor: pointer;
+}
+.bi-pencil-square{
+    color: rgb(71, 208, 71);
+}
+
+.bi-file-earmark-x-fill{
+    color: red;
+}
